--- a/canvas/Demo/demo_style.css
+++ b/canvas/Demo/demo_style.css
@@ -1,5 +1,6 @@
 .demo {
   box-shadow: 0 0 2px #666;
   border: 1px solid #e0e0e0e0;
+  margin: 0 auto;
 }
 /*# sourceMappingURL=demo_style.css.map */
